# vr_trackers

./: .gitignore  vr_trackers.kicad_pcb  vr_trackers.kicad_pro  vr_trackers.kicad_sch
firmware/: CMakeLists.txt  prj.conf  west.yml
firmware/boards/ellie/vr_trackers/: Kconfig.vr_trackers  board.cmake  board.yml  vr_trackers-pinctrl.dtsi  vr_trackers.defconfig  vr_trackers.dts  vr_trackers.yml
firmware/include/: config.h
firmware/include/hardware/: button.h  esb.h  imu.h  magnetometer.h  usb.h
firmware/include/protocol/: data.h
firmware/src/: main.c
firmware/src/hardware/: button.c  esb.c  imu.c  magnetometer.c  usb.c
models/: vr_trackers_case.f3z
software/: .gitignore  CMakeLists.txt
swd_adapter/: swd_adapter.kicad_pcb  swd_adapter.kicad_pro  swd_adapter.kicad_sch
